[package]
edition = "2024"
name = "sjmini"
version = "0.1.0"
authors = ["Matthew Li <matthew.li10@education.nsw.gov.au>"]
resolver = "2"

[[bin]]
name = "sjmini"
test = false
bench = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
cortex-m = { version = "0.7.7" }
embassy-rp = { version = "0.8.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
] }
cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
static_cell = "2.1.1"
cyw43-pio = { version = "0.8.0", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv4",
    "udp",
] }
chrono = { version = "0.4.42", default-features = false }
fixed = "1.29.0"
subjective = { version = "0.3.2", default-features = false }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[build-dependencies]
chrono = "0.4.42"
quote = "1.0.41"
serde_json = "1.0.145"
subjective = "0.3.2"
